--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -2,7 +2,7 @@
   "region": {
     "jobs": [
       {
-        "region": "",
+        "region": [],
         "job_name": "",
         "parameters": [
           {
