python code to check for ami versions and dynamica jenkisnfile

--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -5,8 +5,8 @@
         "parameters": [
           {
             "name": "message",
-            "value": "",
-            "type": "string"
+            "value": "bye",
+            "$class": "StringParameterValue"
           }
         ]
       }
