python code to check for ami versions and dynamica jenkisnfile

--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -5,7 +5,9 @@
         "parameters": [
           {
             "name": "message",
-            "value": "bye"
+            "value": "bye",
+            "$class": "StringParameterValue"
+
           }
         ]
       }
