added dynamic parameters in jenkins

--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -5,8 +5,7 @@
         "parameters": [
           {
             "name": "message",
-            "value": "bye",
-            "$class": "StringParameterValue"
+            "value": "bye"
 
           }
         ]
