--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -5,7 +5,8 @@
         "parameters": [
           {
             "name": "message",
-            "value": "bye"
+            "value": "bye",
+            "$class": "StringParameterValue"
 
           }
         ]
