--- a/config/jobconfig.json
+++ b/config/jobconfig.json
@@ -1,22 +1,27 @@
 {
-  "jobs": [
+  "service_name": "test",
+  "test": [
     {
-      "job_name": "test",
-      "parameters": [
+      "jobs": [
         {
-          "name": "message",
-          "value": "bye",
-          "$class": "StringParameterValue"
-        }
-      ]
-    },
-    {
-      "job_name": "second",
-      "parameters": [
+          "job_name": "first",
+          "parameters": [
+            {
+              "name": "message",
+              "value": "1",
+              "$class": "StringParameterValue"
+            }
+          ]
+        },
         {
-          "name": "message",
-          "value": "bye",
-          "$class": "StringParameterValue"
+          "job_name": "second",
+          "parameters": [
+            {
+              "name": "message",
+              "value": "2",
+              "$class": "StringParameterValue"
+            }
+          ]
         }
       ]
     }
