--- a/config/config.json
+++ b/config/config.json
@@ -6,7 +6,7 @@
       "filters": [
         {
           "Name": "name",
-          "Values": ["bv/amzn2-ami-hvm-2.0.????????.?-x86_64-gp2*"]
+          "Values": ["postgresql"]
         }
       ]
     },
