--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-boto3==1.20.54
-botocore==1.23.54
+boto3==1.21.4
+botocore==1.24.4
+certifi==2021.10.8
+charset-normalizer==2.0.12
+idna==3.3
 jmespath==0.10.0
 python-dateutil==2.8.2
+python-dotenv==0.19.2
+PyYAML==6.0
+requests==2.27.1
 s3transfer==0.5.1
 six==1.16.0
 urllib3==1.26.8
