updated: logic for paginated result

--- a/config/config.json
+++ b/config/config.json
@@ -17,6 +17,21 @@
       "service_name": "first",
       "job_name":"first",
       "regions": ["us-east-1","ap-south-1"]
+    },{
+      "images": {
+        "filters": [
+          {
+            "Name": "name",
+            "Values": ["ansible*"]
+          },{
+            "Name": "tag:env",
+            "Values": ["test-raghav"]
+          }
+        ]
+      },
+      "service_name": "second",
+      "job_name":"second",
+      "regions": ["us-east-1","ap-south-1"]
     }
   ]
 }
